--- a/src/app/procedures/presentation/pages/internals-manage/internal-dialog/internal-dialog.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internal-dialog/internal-dialog.component.html
@@ -1,18 +1,7 @@
 <h2 mat-dialog-title>{{ data ? "Edicion" : "Creacion" }} Tramite Interno</h2>
 <mat-dialog-content>
-  <form [formGroup]="formProcedure" class="pt-2">
-    @if (!data) {
-    <select-search
-      [items]="documents()"
-      (onTyped)="searchDocuments($event)"
-      (onSelect)="onSelectDoc($event)"
-      [autoFilter]="false"
-      title="OPCIONAL - Documento a adjuntar (CITE)"
-      placeholder="Selecciono un documento (Opcional)"
-      placeholderLabel="Referencia / Codigo"
-    />
-    }
-    <div formGroupName="sender" class="flex gap-x-2">
+  <form [formGroup]="formProcedure" class="pt-2 space-y-2">
+    <div formGroupName="sender" class="flex flex-col sm:flex-row gap-x-3">
       <div class="flex-1">
         <autocomplete
           title="Remitente"
@@ -20,6 +9,7 @@
           [value]="formProcedure.get('sender.fullname')?.value"
           (onTyped)="searchAccounts('sender', $event)"
           (onSelect)="onSelectAcount('sender', $event)"
+          placeholder="Nombre del funcionario"
         />
       </div>
       <div class="flex-1">
@@ -29,7 +19,7 @@
         </mat-form-field>
       </div>
     </div>
-    <div formGroupName="recipient" class="flex gap-x-2">
+    <div formGroupName="recipient" class="flex flex-col sm:flex-row gap-x-3">
       <div class="flex-1">
         <autocomplete
           title="Destinatario"
@@ -37,6 +27,7 @@
           [value]="formProcedure.get('recipient.fullname')?.value"
           (onTyped)="searchAccounts('recipient', $event)"
           (onSelect)="onSelectAcount('recipient', $event)"
+          placeholder="Nombre del funcionario"
         />
       </div>
       <div class="flex-1">
@@ -50,10 +41,14 @@
       <mat-label>Referencia del tramite</mat-label>
       <textarea formControlName="reference" matInput></textarea>
     </mat-form-field>
-    <div class="sm:w-80">
+    <div class="flex flex-col sm:flex-row gap-x-3">
       <mat-form-field>
         <mat-label>Cantidad: Hojas / Anexos</mat-label>
         <input formControlName="numberOfDocuments" matInput />
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label>CITE</mat-label>
+        <input formControlName="cite" matInput />
       </mat-form-field>
     </div>
   </form>
