--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -6,25 +6,19 @@
   </button>
 </mat-toolbar>
 
-<div class="flex justify-end py-2">
-  <div class="w-full px-2 sm:w-1/4 h-11">
-    <search-input
-      [initValue]="term()"
-      (onSearch)="search($event)"
-      placeholder="Alterno / Referencia"
-    />
-  </div>
-</div>
-
 <div class="mat-elevation-z8 px-2 sm:px-4">
+  <div class="flex justify-end py-2">
+    <div class="w-full sm:w-1/4 px-2 h-11">
+      <search-input [initValue]="term()" (onSearch)="search($event)" placeholder="Alterno / Referencia"/>
+    </div>
+  </div>
   <div class="table-container">
     <table mat-table [dataSource]="datasource()">
       <ng-container matColumnDef="send">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element" class="w-8">
           @if(element.isActionable){
-          <mat-icon style="color: orangered">mark_email_unread </mat-icon>
-
+          <mat-icon style="color: orangered">mark_email_unread</mat-icon>
           } @else {
           <mat-icon style="color: green">mark_email_read</mat-icon>
           }
@@ -33,7 +27,10 @@
       <ng-container matColumnDef="code">
         <th mat-header-cell *matHeaderCellDef>Alterno</th>
         <td mat-cell *matCellDef="let row" [id]="row._id" class="sm:w-[200px]">
-          <a [routerLink]="['../external', 'detail',row._id]" class="text-blue-600">
+          <a
+            [routerLink]="['../external', 'detail', row._id]"
+            class="text-blue-500"
+          >
             {{ row.code }}
           </a>
         </td>
@@ -99,9 +96,9 @@
     <mat-paginator
       aria-label="Select page of officers search results"
       showFirstLastButtons
-      [length]="datasize()"
-      [pageIndex]="index()"
       [pageSize]="10"
+      [pageIndex]="index()"
+      [length]="datasize()"
       (page)="onPageChange($event)"
     />
   </div>
