--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -6,24 +6,18 @@
   </button>
 </mat-toolbar>
 
-<div class="flex justify-end py-2">
-  <div class="w-full px-2 sm:w-1/4 h-11">
-    <search-input
-      [initValue]="term()"
-      (onSearch)="search($event)"
-      placeholder="Alterno / Referencia"
-    />
-  </div>
-</div>
-
 <div class="px-2 sm:px-4">
+  <div class="flex justify-end py-2">
+    <div class="w-full px-2 sm:w-1/4 h-11">
+      <search-input [initValue]="term()"  (onSearch)="search($event)" placeholder="Alterno / Referencia"/>
+    </div>
+  </div>
   <table mat-table [dataSource]="datasource()">
     <ng-container matColumnDef="send">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element" class="w-8">
         @if(element.isActionable){
         <mat-icon style="color: orangered">mark_email_unread </mat-icon>
-
         } @else {
         <mat-icon style="color: green">mark_email_read</mat-icon>
         }
@@ -104,7 +98,7 @@
     showFirstLastButtons
     [length]="datasize()"
     [pageIndex]="index()"
-    [pageSize]="10"
+    [pageSize]="limit()"
     (page)="onPageChange($event)"
   />
 </div>
