correcion inbox manage

--- a/src/app/communications/presentation/pages/inbox/inbox.component.html
+++ b/src/app/communications/presentation/pages/inbox/inbox.component.html
@@ -83,9 +83,7 @@
   </div>
 </ng-template>
 <div class="px-2 sm:px-4">
-  <div
-    class="flex flex-col sm:flex-row justify-between items-center py-2 gap-y-2"
-  >
+  <div class="flex flex-col sm:flex-row justify-between items-center py-2 gap-y-2">
     <div>
       <mat-button-toggle-group [(ngModel)]="status" (change)="getData()">
         <mat-button-toggle value="all">Todo</mat-button-toggle>
