--- a/src/app/communications/presentation/pages/outbox/outbox.component.html
+++ b/src/app/communications/presentation/pages/outbox/outbox.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
   <span>Bandeja de salida</span>
   <span class="flex-1"></span>
-  @if (selection.selected.length>0) {
+  @if (isButtonEnabledForStatus('pending')) {
   <button
     mat-icon-button
     aria-label="Cancel"
@@ -13,214 +13,207 @@
   }
 </mat-toolbar>
 
-<div class="flex justify-end py-2">
-  <div class="w-full px-4 sm:w-1/4 h-11">
-    <search-input
-      (onSearch)="search($event)"
-      placeholder="Alterno / Destinatario"
+<div class="px-2 sm:px-4">
+  <div class="flex justify-end py-2">
+    <div class="w-full sm:w-1/4 h-11">
+      <search-input (onSearch)="search($event)" placeholder="Alterno / Destinatario"/>
+    </div>
+  </div>
+
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="datasource()" multiTemplateDataRows>
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef class="w-8">
+          <mat-checkbox
+            (change)="$event ? toggleAllRows() : null"
+            [checked]="selection.hasValue() && isAllSelected()"
+            [indeterminate]="selection.hasValue() && !isAllSelected()"
+          />
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox
+            (click)="$event.stopPropagation()"
+            (change)="$event ? selection.toggle(row) : null"
+            [checked]="selection.isSelected(row)"
+          />
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="type">
+        <th mat-header-cell *matHeaderCellDef>Documento</th>
+        <td mat-cell *matCellDef="let item">
+          {{ item.groupLabel }} / {{ item.documentLabel }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="code">
+        <th mat-header-cell *matHeaderCellDef>Alterno</th>
+        <td mat-cell *matCellDef="let item">
+          {{ item.procedure.code }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="recipient">
+        <th mat-header-cell *matHeaderCellDef>Destinatario</th>
+        <td mat-cell *matCellDef="let item" class="sm:max-w-80">
+          {{ item.recipient.fullname | titlecase }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="sentDate">
+        <th mat-header-cell *matHeaderCellDef>Fecha</th>
+        <td mat-cell *matCellDef="let item" class="w-36">
+          {{ item.sentDate | date : "short" }}
+        </td>
+      </ng-container>
+
+     
+      <ng-container matColumnDef="time">
+        <th mat-header-cell *matHeaderCellDef>Duracion</th>
+        <td mat-cell *matCellDef="let item">
+          @switch (item.status){ @case ('rejected') {
+          <badge severity="danger" message="Rechazado" />
+          } @case ('pending') {
+          <badge
+            severity="warning"
+            [message]="item.remainingTime | humanizeDuration"
+          />
+          } @case ('approved') {
+          <!-- <badge severity="warning" [message]="item.remainingTime.tosString()" /> -->
+          } @case ('auto-rejected') {
+          <badge severity="purple" message="Expirado" />
+          } @default {
+          <span>Invalido</span>
+          } }
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="expand">
+        <th mat-header-cell *matHeaderCellDef aria-label="row actions">
+          &nbsp;
+        </th>
+        <td mat-cell *matCellDef="let item" class="w-8">
+          <button
+            mat-icon-button
+            aria-label="expand row"
+            (click)="
+              expandedElement = expandedElement === item ? null : item;
+              $event.stopPropagation()
+            "
+          >
+            @if (expandedElement === item) {
+            <mat-icon>keyboard_arrow_up</mat-icon>
+            } @else {
+            <mat-icon>keyboard_arrow_down</mat-icon>
+            }
+          </button>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="options">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let item" class="w-8">
+          <button mat-icon-button [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+          <mat-menu #menu="matMenu">
+            <button
+              mat-menu-item
+              (click)="send(item)"
+              [disabled]="item.status === 'pending' && !item.isOriginal"
+            >
+              <mat-icon>reply</mat-icon>
+              <span>Reenviar</span>
+            </button>
+            <button
+              mat-menu-item
+              (click)="cancelOne(item)"
+              [disabled]="item.status !== 'pending'"
+            >
+              <mat-icon>delete</mat-icon>
+              <span>Cancelar</span>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="expandedDetail">
+        <td
+          mat-cell
+          *matCellDef="let item"
+          [attr.colspan]="displayedColumns.length"
+        >
+          <div
+            [@detailExpand]="item == expandedElement ? 'expanded' : 'collapsed'"
+          >
+            <div class="sm:px-6 py-3">
+              <dl class="text-sm">
+                <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
+                  <dt class="font-medium">Destinatario:</dt>
+                  <dd class="sm:col-span-4">
+                    {{ item.recipient.fullname | titlecase }} -
+                    <span class="text-xs">{{ item.recipient.jobtitle }}</span>
+                  </dd>
+                </div>
+
+                <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
+                  <dt class="font-medium">Fecha de envio:</dt>
+                  <dd class="sm:col-span-2">
+                    {{ item.sentDate | date : "short" }}
+                  </dd>
+                </div>
+
+                <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
+                  <dt class="font-medium">Instruccion / Proveido</dt>
+                  <dd class="sm:col-span-4">
+                    {{ item.reference }}
+                  </dd>
+                </div>
+
+                @if(item.actionLog){
+                <div class="grid grid-cols-1 py-3 sm:grid-cols-5 text-red-600">
+                  <dt class="font-medium">Descripcion rechazo:</dt>
+                  <dd class="sm:col-span-2">
+                    <div class="block">
+                      [{{ item.actionLog.date | date : "short" }}]
+                    </div>
+                    <div class="block">
+                      {{ item.actionLog.fullname | titlecase }}
+                    </div>
+                    <div class="block">
+                      Motivo: {{ item.actionLog.description }}
+                    </div>
+                  </dd>
+                </div>
+                }
+              </dl>
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        class="element-row"
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: ['expandedDetail']"
+        class="detail-row"
+      ></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell p-3" colspan="8">Sin resultados</td>
+      </tr>
+    </table>
+    <mat-paginator
+      aria-label="Select page of users search results"
+      showFirstLastButtons
+      [length]="datasize()"
+      [pageIndex]="index()"
+      [pageSize]="10"
+      (page)="onPageChange($event)"
     />
   </div>
-</div>
-
-<div class="mat-elevation-z8 px-2 sm:px-4">
-  <table mat-table [dataSource]="datasource()" multiTemplateDataRows>
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef class="w-8">
-        <mat-checkbox
-          (change)="$event ? toggleAllRows() : null"
-          [checked]="selection.hasValue() && isAllSelected()"
-          [indeterminate]="selection.hasValue() && !isAllSelected()"
-        />
-      </th>
-      <td mat-cell *matCellDef="let row">
-        <mat-checkbox
-          (click)="$event.stopPropagation()"
-          (change)="$event ? selection.toggle(row) : null"
-          [checked]="selection.isSelected(row)"
-        />
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="code">
-      <th mat-header-cell *matHeaderCellDef>Alterno</th>
-      <td mat-cell *matCellDef="let item">
-        {{ item.procedure.code }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="type">
-      <th mat-header-cell *matHeaderCellDef>Documento</th>
-      <td mat-cell *matCellDef="let item">
-        {{ item.groupLabel }} / {{ item.documentLabel }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="reference">
-      <th mat-header-cell *matHeaderCellDef>Proveido</th>
-      <td mat-cell *matCellDef="let item">
-        {{ item.reference }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="sentDate">
-      <th mat-header-cell *matHeaderCellDef>Fecha</th>
-      <td mat-cell *matCellDef="let item" class="w-36">
-        {{ item.sentDate | date : "short" }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="recipient">
-      <th mat-header-cell *matHeaderCellDef>Destinatario</th>
-      <td mat-cell *matCellDef="let item" class="sm:max-w-80">
-        Para: {{ item.recipient.fullname | titlecase }}
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="time">
-      <th mat-header-cell *matHeaderCellDef>Duracion</th>
-      <td mat-cell *matCellDef="let item">
-        @switch (item.status){ @case ('rejected') {
-        <badge severity="danger" message="Rechazado" />
-        } @case ('pending') {
-        <badge
-          severity="warning"
-          [message]="item.remainingTime | humanizeDuration"
-        />
-        } @case ('approved') {
-        <!-- <badge severity="warning" [message]="item.remainingTime.tosString()" /> -->
-        } @case ('auto-rejected') {
-        <badge severity="purple" message="Expirado" />
-        } @default {
-        <span>Invalido</span>
-        } }
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="expand">
-      <th mat-header-cell *matHeaderCellDef aria-label="row actions">&nbsp;</th>
-      <td mat-cell *matCellDef="let item" class="w-8">
-        <button
-          mat-icon-button
-          aria-label="expand row"
-          (click)="
-            expandedElement = expandedElement === item ? null : item;
-            $event.stopPropagation()
-          "
-        >
-          @if (expandedElement === item) {
-          <mat-icon>keyboard_arrow_up</mat-icon>
-          } @else {
-          <mat-icon>keyboard_arrow_down</mat-icon>
-          }
-        </button>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="options">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let item" class="w-8">
-        <button mat-icon-button [matMenuTriggerFor]="menu">
-          <mat-icon>more_vert</mat-icon>
-        </button>
-        <mat-menu #menu="matMenu">
-          <button
-            mat-menu-item
-            (click)="send(item)"
-            [disabled]="item.status === 'pending' && !item.isOriginal"
-          >
-            <mat-icon>reply</mat-icon>
-            <span>Reenviar</span>
-          </button>
-          <button
-            mat-menu-item
-            (click)="cancelOne(item)"
-            [disabled]="item.status !== 'pending'"
-          >
-            <mat-icon>delete</mat-icon>
-            <span>Cancelar</span>
-          </button>
-        </mat-menu>
-      </td>
-    </ng-container>
-
-    <ng-container matColumnDef="expandedDetail">
-      <td
-        mat-cell
-        *matCellDef="let item"
-        [attr.colspan]="displayedColumns.length"
-      >
-        <div
-          [@detailExpand]="item == expandedElement ? 'expanded' : 'collapsed'"
-        >
-          <div class="sm:px-6 py-3">
-            <dl class="text-sm">
-              <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
-                <dt class="font-medium">Destinatario:</dt>
-                <dd class="sm:col-span-4">
-                  <span class="font-semibold text-base">
-                    {{ item.recipient.fullname | titlecase }}
-                  </span>
-                  <span> ({{ item.recipient.jobtitle }}) </span>
-                </dd>
-              </div>
-
-              <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
-                <dt class="font-medium">Fecha de envio:</dt>
-                <dd class="sm:col-span-2">
-                  {{ item.sentDate | date : "short" }}
-                </dd>
-              </div>
-
-              <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
-                <dt class="font-medium">Instruccion / Proveido</dt>
-                <dd class="sm:col-span-4">
-                  {{ item.reference }}
-                </dd>
-              </div>
-
-              @if(item.actionLog){
-              <div class="grid grid-cols-1 py-3 sm:grid-cols-5 text-red-600">
-                <dt class="font-medium">Descripcion rechazo:</dt>
-                <dd class="sm:col-span-2">
-                  <div class="block">
-                    [{{ item.actionLog.date | date : "short" }}]
-                  </div>
-                  <div class="block">
-                    {{ item.actionLog.fullname | titlecase }}
-                  </div>
-                  <div class="block">
-                    Motivo: {{ item.actionLog.description }}
-                  </div>
-                </dd>
-              </div>
-              }
-            </dl>
-          </div>
-        </div>
-      </td>
-    </ng-container>
-
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: displayedColumns"
-      class="element-row"
-    ></tr>
-    <tr
-      mat-row
-      *matRowDef="let row; columns: ['expandedDetail']"
-      class="detail-row"
-    ></tr>
-    <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell p-3" colspan="8">Sin resultados</td>
-    </tr>
-  </table>
-  <mat-paginator
-    aria-label="Select page of users search results"
-    showFirstLastButtons
-    [length]="datasize()"
-    [pageIndex]="index()"
-    [pageSize]="10"
-    (page)="onPageChange($event)"
-  />
 </div>
