--- a/src/app/communications/presentation/pages/archives/archives.component.html
+++ b/src/app/communications/presentation/pages/archives/archives.component.html
@@ -5,47 +5,50 @@
   <span class="ml-2">Contenido</span>
 </mat-toolbar>
 
-<div class="flex flex-col sm:flex-row items-center justify-between py-2 px-3">
-  <div class="text-lg font-medium">{{ folderName() }} </div>
-  <div class="w-full sm:w-1/4 h-11">
-    <search-input
-      [initValue]="term()"
-      (onSearch)="search($event)"
-      placeholder="Alterno / Referencia"
-    />
+<div class="px-2 sm:px-4">
+  <div class="flex flex-col sm:flex-row items-center justify-between py-2 px-3">
+    <div class="text-lg font-medium">{{ folderName() }}</div>
+    <div class="w-full sm:w-1/4 h-11">
+      <search-input
+        [initValue]="term()"
+        (onSearch)="search($event)"
+        placeholder="Alterno / Referencia"
+      />
+    </div>
   </div>
+
+  <table mat-table [dataSource]="datasource()">
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef>Alterno</th>
+      <td mat-cell *matCellDef="let element">{{ element.procedure.code }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef>Descripcion</th>
+      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="officer">
+      <th mat-header-cell *matHeaderCellDef>Nombre</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.officer.fullname | titlecase }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef>Weight</th>
+      <td mat-cell *matCellDef="let element">
+        {{ element.createdAt | date : "short" }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef>Symbol</th>
+      <td mat-cell *matCellDef="let element"></td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
 </div>
 
-<table mat-table [dataSource]="datasource()">
-  <ng-container matColumnDef="code">
-    <th mat-header-cell *matHeaderCellDef>Alterno</th>
-    <td mat-cell *matCellDef="let element">{{ element.procedure.code }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef>Descripcion</th>
-    <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-  </ng-container>
-
-  <ng-container matColumnDef="officer">
-    <th mat-header-cell *matHeaderCellDef>Nombre</th>
-    <td mat-cell *matCellDef="let element">
-      {{ element.officer.fullname | titlecase }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef>Weight</th>
-    <td mat-cell *matCellDef="let element">
-      {{ element.createdAt | date : "short" }}
-    </td>
-  </ng-container>
-
-  <ng-container matColumnDef="options">
-    <th mat-header-cell *matHeaderCellDef>Symbol</th>
-    <td mat-cell *matCellDef="let element"></td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-</table>
