correcion generacion hoja de rua

--- a/src/app/communications/presentation/pages/archives/archives.component.html
+++ b/src/app/communications/presentation/pages/archives/archives.component.html
@@ -3,6 +3,7 @@
     <mat-icon>arrow_back</mat-icon>
   </button>
   <span class="ml-2">Contenido</span>
+  <span class="flex-1"></span>
 </mat-toolbar>
 
 <div class="px-2 sm:px-4">
@@ -17,38 +18,133 @@
     </div>
   </div>
 
-  <table mat-table [dataSource]="datasource()">
-    <ng-container matColumnDef="code">
-      <th mat-header-cell *matHeaderCellDef>Alterno</th>
-      <td mat-cell *matCellDef="let element">{{ element.procedure.code }}</td>
-    </ng-container>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="datasource()" multiTemplateDataRows>
 
-    <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef>Descripcion</th>
-      <td mat-cell *matCellDef="let element">{{ element.description }}</td>
-    </ng-container>
+      <ng-container matColumnDef="document">
+        <th mat-header-cell *matHeaderCellDef>Documento</th>
+        <td mat-cell *matCellDef="let item" class="sm:w-[150px]">
+          {{ item.groupLabel }} - {{ item.documentLabel }}
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="officer">
-      <th mat-header-cell *matHeaderCellDef>Nombre</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.officer.fullname | titlecase }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="code">
+        <th mat-header-cell *matHeaderCellDef>Codigo</th>
+        <td mat-cell *matCellDef="let item" class="sm:w-[200px]">
+          <a
+            [routerLink]="['../', item.procedure.group, item.procedure.ref]"
+            class="text-blue-500"
+          >
+            {{ item.procedure.code }}
+          </a>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef>Weight</th>
-      <td mat-cell *matCellDef="let element">
-        {{ element.createdAt | date : "short" }}
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="description">
+        <th mat-header-cell *matHeaderCellDef>Referencia</th>
+        <td mat-cell *matCellDef="let item">
+          <span class="truncate"> {{ item.procedure.reference }}</span>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="options">
-      <th mat-header-cell *matHeaderCellDef>Symbol</th>
-      <td mat-cell *matCellDef="let element"></td>
-    </ng-container>
+      <ng-container matColumnDef="officer">
+        <th mat-header-cell *matHeaderCellDef>Responsable</th>
+        <td mat-cell *matCellDef="let item" class="sm:max-w-80">
+          {{ item.officer.fullname | titlecase }}
+        </td>
+      </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Fecha</th>
+        <td mat-cell *matCellDef="let item" class="w-36">
+          {{ item.createdAt | date : "short" }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="expand">
+        <th mat-header-cell *matHeaderCellDef aria-label="row actions">
+          &nbsp;
+        </th>
+        <td mat-cell *matCellDef="let item" class="w-8">
+          <button
+            mat-icon-button
+            aria-label="expand row"
+            (click)="
+              expandedElement = expandedElement === item ? null : item;
+              $event.stopPropagation()
+            "
+          >
+            @if (expandedElement === item) {
+            <mat-icon>keyboard_arrow_up</mat-icon>
+            } @else {
+            <mat-icon>keyboard_arrow_down</mat-icon>
+            }
+          </button>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="options">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let item" class="w-8">
+          <button mat-icon-button (click)="unarchive(item)">
+            <mat-icon>unarchive</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="expandedDetail">
+        <td
+          mat-cell
+          *matCellDef="let item"
+          [attr.colspan]="displayedColumns.length"
+        >
+          <div
+            [@detailExpand]="item == expandedElement ? 'expanded' : 'collapsed'"
+          >
+            <div class="sm:px-6 py-3">
+              <dl class="text-sm">
+                <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
+                  <dt class="font-medium">Encargado:</dt>
+                  <dd class="sm:col-span-4">
+                    {{ item.officer.fullname | titlecase }} -
+                    <span class="text-xs">{{ item.officer.jobtitle }}</span>
+                  </dd>
+                </div>
+
+                <div class="grid grid-cols-1 sm:grid-cols-5 py-3 sm:py-1">
+                  <dt class="font-medium">Motivo del archivo:</dt>
+                  <dd class="sm:col-span-2">
+                    {{ item.description }}
+                  </dd>
+                </div>
+              </dl>
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: displayedColumns"
+        class="element-row"
+      ></tr>
+      <tr
+        mat-row
+        *matRowDef="let row; columns: ['expandedDetail']"
+        class="detail-row"
+      ></tr>
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell p-3" colspan="8">Sin resultados</td>
+      </tr>
+    </table>
+    <mat-paginator
+      aria-label="Select page of users search results"
+      showFirstLastButtons
+      [length]="datasize()"
+      [pageIndex]="index()"
+      [pageSize]="10"
+      (page)="onPageChange($event)"
+    />
+  </div>
 </div>
-
