--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -9,7 +9,11 @@
 <div class="mat-elevation-z8 px-2 sm:px-4">
   <div class="flex justify-end py-2">
     <div class="w-full sm:w-1/4 px-2 h-11">
-      <search-input [initValue]="term()" (onSearch)="search($event)" placeholder="Alterno / Referencia"/>
+      <search-input
+        [initValue]="term()"
+        (onSearch)="search($event)"
+        placeholder="Alterno / Referencia"
+      />
     </div>
   </div>
   <div class="table-container">
@@ -28,7 +32,7 @@
         <th mat-header-cell *matHeaderCellDef>Alterno</th>
         <td mat-cell *matCellDef="let row" [id]="row._id" class="sm:w-[200px]">
           <a
-            [routerLink]="['../external', 'detail', row._id]"
+            [routerLink]="['../external', row.group, row._id]"
             class="text-blue-500"
           >
             {{ row.code }}
