--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -6,9 +6,9 @@
   </button>
 </mat-toolbar>
 
-<div class="mat-elevation-z8 px-2 sm:px-4">
-  <div class="flex justify-end py-2">
-    <div class="w-full sm:w-1/4 px-2 h-11">
+<div class="p-2 sm:p-6">
+  <div class="flex justify-end mb-2">
+    <div class="w-full sm:w-1/4 h-12">
       <search-input
         [initValue]="term()"
         (onSearch)="search($event)"
@@ -16,94 +16,95 @@
       />
     </div>
   </div>
-  <div class="table-container">
-    <table mat-table [dataSource]="datasource()">
-      <ng-container matColumnDef="send">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let element" class="w-8">
-          @if(element.isActionable){
-          <mat-icon style="color: orangered">mark_email_unread</mat-icon>
-          } @else {
-          <mat-icon style="color: green">mark_email_read</mat-icon>
-          }
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="code">
-        <th mat-header-cell *matHeaderCellDef>Alterno</th>
-        <td mat-cell *matCellDef="let row" [id]="row._id" class="sm:w-[200px]">
-          <a
-            [routerLink]="['../external', row.group, row._id]"
-            class="text-blue-500"
-          >
-            {{ row.code }}
-          </a>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="reference">
-        <th mat-header-cell *matHeaderCellDef>Referencia</th>
-        <td mat-cell *matCellDef="let row" class="sm:max-w-72">
-          <p class="truncate">{{ row.reference }}</p>
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="applicant">
-        <th mat-header-cell *matHeaderCellDef>Solicitante</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.fullnameApplicant | titlecase }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="date">
-        <th mat-header-cell *matHeaderCellDef>Fecha</th>
-        <td mat-cell *matCellDef="let row">
-          {{ row.createdAt | date : "shortDate" : "-400" }}
-        </td>
-      </ng-container>
-      <ng-container matColumnDef="options">
-        <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let row" class="w-8">
+  <table mat-table [dataSource]="datasource()">
+    <ng-container matColumnDef="send">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let element" class="w-8">
+        <mat-icon
+          [ngClass]="
+            element.isActionable ? 'text-green-600' : 'text-orange-500'
+          "
+          >outgoing_mail</mat-icon
+        >
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="code">
+      <th mat-header-cell *matHeaderCellDef>Alterno</th>
+      <td mat-cell *matCellDef="let row" [id]="row._id" class="sm:w-[200px]">
+        <a
+          [routerLink]="['../external', row.group, row._id]"
+          class="text-blue-500"
+        >
+          {{ row.code }}
+        </a>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="reference">
+      <th mat-header-cell *matHeaderCellDef>Referencia</th>
+      <td mat-cell *matCellDef="let row" class="sm:max-w-72">
+        <p class="truncate">{{ row.reference }}</p>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="applicant">
+      <th mat-header-cell *matHeaderCellDef>Solicitante</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.fullnameApplicant | titlecase }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="date">
+      <th mat-header-cell *matHeaderCellDef>Fecha</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.createdAt | date : "shortDate" : "-400" }}
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let row" class="w-8">
+        <button
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Options menu"
+        >
+          <mat-icon>more_vert</mat-icon>
+        </button>
+        <mat-menu #menu="matMenu">
           <button
-            mat-icon-button
-            [matMenuTriggerFor]="menu"
-            aria-label="Options menu"
+            mat-menu-item
+            [disabled]="!row.isActionable"
+            (click)="update(row)"
           >
-            <mat-icon>more_vert</mat-icon>
+            <mat-icon>edit</mat-icon>
+            <span>Editar</span>
           </button>
-          <mat-menu #menu="matMenu">
-            <button
-              mat-menu-item
-              [disabled]="!row.isActionable"
-              (click)="update(row)"
-            >
-              <mat-icon>edit</mat-icon>
-              <span>Editar</span>
-            </button>
-            <button
-              mat-menu-item
-              [disabled]="!row.isActionable"
-              (click)="send(row)"
-            >
-              <mat-icon>send</mat-icon>
-              <span>Remitir </span>
-            </button>
-            <button mat-menu-item (click)="generateRouteMap(row)">
-              <mat-icon>feed</mat-icon>
-              <span>Hoja de ruta</span>
-            </button>
-          </mat-menu>
-        </td>
-      </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      <tr class="mat-row" *matNoDataRow>
-        <td class="mat-cell p-2" colspan="6">Sin resultados</td>
-      </tr>
-    </table>
-    <mat-paginator
-      aria-label="Select page of officers search results"
-      showFirstLastButtons
-      [pageSize]="10"
-      [pageIndex]="index()"
-      [length]="datasize()"
-      (page)="onPageChange($event)"
-    />
-  </div>
+          <button
+            mat-menu-item
+            [disabled]="!row.isActionable"
+            (click)="send(row)"
+          >
+            <mat-icon>send</mat-icon>
+            <span>Remitir </span>
+          </button>
+          <button mat-menu-item (click)="generateRouteMap(row)">
+            <mat-icon>feed</mat-icon>
+            <span>Hoja de ruta</span>
+          </button>
+        </mat-menu>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell p-2" colspan="6">Sin resultados</td>
+    </tr>
+  </table>
+  @if(datasize()>limit()){
+  <mat-paginator
+    aria-label="Select page of officers search results"
+    showFirstLastButtons
+    [length]="datasize()"
+    [pageIndex]="index()"
+    [pageSize]="limit()"
+    (page)="onPageChange($event)"
+  />
+  }
 </div>
