--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -6,21 +6,26 @@
   </button>
 </mat-toolbar>
 
-<div class="px-2 sm:px-4">
-  <div class="flex justify-end py-2">
-    <div class="w-full px-2 sm:w-1/4 h-11">
-      <search-input [initValue]="term()"  (onSearch)="search($event)" placeholder="Alterno / Referencia"/>
+<div class="p-2 sm:p-6">
+  <div class="flex justify-end mb-2">
+    <div class="w-full sm:w-1/4 h-12">
+      <search-input
+        [initValue]="term()"
+        (onSearch)="search($event)"
+        placeholder="Alterno / Referencia"
+      />
     </div>
   </div>
   <table mat-table [dataSource]="datasource()">
     <ng-container matColumnDef="send">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element" class="w-8">
-        @if(element.isActionable){
-        <mat-icon style="color: orangered">mark_email_unread </mat-icon>
-        } @else {
-        <mat-icon style="color: green">mark_email_read</mat-icon>
-        }
+        <mat-icon
+          [ngClass]="
+            element.isActionable ? 'text-green-600' : 'text-orange-500'
+          "
+          >outgoing_mail</mat-icon
+        >
       </td>
     </ng-container>
     <ng-container matColumnDef="code">
@@ -93,6 +98,7 @@
       <td class="p-3" colspan="6">Sin resultados resultados</td>
     </tr>
   </table>
+  @if(datasize()>limit()){
   <mat-paginator
     aria-label="Select page of officers search results"
     showFirstLastButtons
@@ -101,4 +107,5 @@
     [pageSize]="limit()"
     (page)="onPageChange($event)"
   />
+  }
 </div>
