--- a/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
+++ b/src/app/procedures/presentation/pages/internals-manage/internals-manage.component.html
@@ -8,7 +8,7 @@
 
 <div class="p-2 sm:p-6">
   <div class="flex justify-end mb-2">
-    <div class="w-full sm:w-1/4 h-12">
+    <div class="w-full sm:w-1/4 h-[54px]">
       <search-input
         [initValue]="term()"
         (onSearch)="search($event)"
@@ -30,7 +30,7 @@
     </ng-container>
     <ng-container matColumnDef="code">
       <th mat-header-cell *matHeaderCellDef>Alterno</th>
-      <td mat-cell *matCellDef="let element" [id]="element._id" class="sm:w-52">
+      <td mat-cell *matCellDef="let element" [id]="element._id" class="sm:w-48">
         <a
           [routerLink]="['../internal', element.group, element._id]"
           class="text-blue-600"
@@ -41,19 +41,19 @@
     </ng-container>
     <ng-container matColumnDef="reference">
       <th mat-header-cell *matHeaderCellDef>Referencia</th>
-      <td mat-cell *matCellDef="let element" class="sm:max-w-80">
+      <td mat-cell *matCellDef="let element" class="sm:max-w-96">
         <p class="truncate">{{ element.reference }}</p>
       </td>
     </ng-container>
     <ng-container matColumnDef="applicant">
       <th mat-header-cell *matHeaderCellDef>Destinatario</th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element" class="sm:max-w-48">
         {{ element.sender.fullname | titlecase }}
       </td>
     </ng-container>
     <ng-container matColumnDef="createdAt">
       <th mat-header-cell *matHeaderCellDef>Fecha</th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let element" class="sm:w-32">
         {{ element.createdAt | date : "short" }}
       </td>
     </ng-container>
