--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,8 +33,8 @@ body {
 :root {
   @include mat.table-overrides(
     (
-      row-item-label-text-size: 11px,
-      row-item-container-height: 30px,
+      row-item-label-text-size: 12px,
+      // row-item-container-height: 30px,
     )
   );
 }
