correcion vista bandeja de entrada

--- a/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
+++ b/src/app/procedures/presentation/pages/externals-manage/externals-manage.component.html
@@ -22,7 +22,7 @@
       <td mat-cell *matCellDef="let element" class="w-8">
         <mat-icon
           [ngClass]="
-            element.isActionable ? 'text-green-600' : 'text-orange-500'
+            element.isActionable ? 'text-orange-500' : 'text-green-600'
           "
           >outgoing_mail</mat-icon
         >
